[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/npc/img/npcCommon.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/img/icons_1.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/font/marietta-seven.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/gui/img/buttons/button_0.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/img/buttons/button_1.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/img/buttons/button_2.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/font/damase_v.2.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/landingManager.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0.823529, 0.501961, 0.12549, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 12
outline_size = 1
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "READ",
"speed": 2.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "IDLE",
"speed": 2.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "DROP_LABEL"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("hbcMain/vbcIntro/ccButton/btnPlay/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hbcMain/vbcIntro/ccButton/btnPlay/Label:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 8, 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hbcMain/vbcIntro/ccButton/btnPlay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.662745, 0.635294, 0.635294, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "HIDE_ICON"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("hbcMain/vbcNPC/ccIcon/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hbcMain/vbcIntro/Title:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0117647, 0.176471, 0.0235294, 1 ), Color( 0.823529, 0.501961, 0.12549, 1 ), Color( 0.0117647, 0.176471, 0.0235294, 1 ) ]
}

[node name="Landing" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="hbcMain" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbcIntro" type="VBoxContainer" parent="hbcMain"]
margin_left = 48.0
margin_right = 262.0
margin_bottom = 216.0
alignment = 1

[node name="Title" type="Label" parent="hbcMain/vbcIntro"]
margin_top = 82.0
margin_right = 214.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 6 )
text = "BROKEN NPC"

[node name="ccButton" type="CenterContainer" parent="hbcMain/vbcIntro"]
margin_top = 102.0
margin_right = 214.0
margin_bottom = 134.0

[node name="btnPlay" type="TextureButton" parent="hbcMain/vbcIntro/ccButton"]
modulate = Color( 0.662745, 0.635294, 0.635294, 1 )
margin_left = 75.0
margin_right = 139.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="hbcMain/vbcIntro/ccButton/btnPlay"]
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 64, 30 )
custom_fonts/font = SubResource( 7 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbcNPC" type="VBoxContainer" parent="hbcMain"]
margin_left = 266.0
margin_right = 336.0
margin_bottom = 216.0
custom_constants/separation = -22
alignment = 1

[node name="ccIcon" type="CenterContainer" parent="hbcMain/vbcNPC"]
margin_top = 56.0
margin_right = 70.0
margin_bottom = 88.0
rect_min_size = Vector2( 70, 32 )

[node name="TextureRect" type="TextureRect" parent="hbcMain/vbcNPC/ccIcon"]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 19.0
margin_right = 51.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="ccNPC" type="CenterContainer" parent="hbcMain/vbcNPC"]
margin_top = 66.0
margin_right = 70.0
margin_bottom = 160.0
rect_min_size = Vector2( 64, 94 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="hbcMain/vbcNPC/ccNPC"]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "IDLE"
playing = true
centered = false

[node name="effectPlayer" type="AnimationPlayer" parent="."]
anims/DROP_LABEL = SubResource( 8 )
anims/HIDE_ICON = SubResource( 15 )
[connection signal="pressed" from="hbcMain/vbcIntro/ccButton/btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="animation_finished" from="effectPlayer" to="." method="_on_effectPlayer_animation_finished"]
